--- a/style.css
+++ b/style.css
@@ -105,3 +105,49 @@ header img {
     margin-top: 80px;
     margin-bottom: 100px;
 }
+
+.formulaire h1 {
+    text-align: center;
+}
+
+form {
+    margin: auto;
+    padding: 20px 200px;
+    gap: 10px;
+    max-width: 600px;
+}
+
+.nom-mail-tel {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.form-column {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    max-width: 1000px;
+}
+
+input {
+    height: 20px;
+    border: none;
+    border-radius: 5px;
+}
+
+input[type='textarea'] {
+    height: 150px;
+    margin-bottom: 20px;
+  }
+
+input[type='submit'] {
+    width: 200px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 60px;
+}
