--- a/style.css
+++ b/style.css
@@ -76,8 +76,10 @@ a:hover {
 }
 
 .présentation img {
-height: 100%;
-width: 100%;
+max-height: 70%;
+min-height: 30%;
+max-width: 70%;
+min-width: 30%;
 margin: auto;
 }
 
