--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 }
 
 body {
-    background-color: #805050;
+    background-color: #96a692;
     color: white;
-    font-family: "Montserrat", sans serif;
+    font-family: "poppins", sans serif;
     font-style: normal;
     font-size: 1em;
     font-optical-sizing: auto;
@@ -15,7 +15,7 @@ body {
 
 header,
 footer {
-    background-color: #FBF0E9;
+    background-color: #f0dbda;
     padding: 10px 50px 10px 50px;
     margin: auto;
 }
@@ -33,8 +33,8 @@ nav a {
 }
 
 h1 {
-    color: #FBF0E9;
-    font-family: "Truculenta", sans-serif;
+    color: #f0dbda;
+    font-family: "poppins", sans-serif;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
@@ -44,8 +44,8 @@ h1 {
 }
 
 h2 {
-    color: #FBF0E9;
-    font-family: "Truculenta", sans-serif;
+    color: #f0dbda;
+    font-family: "poppins", sans-serif;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
@@ -63,7 +63,7 @@ a:hover {
 }
 
 .cta {
-    background: linear-gradient(#AD9C92,#CE8F8A);
+    background: #f0dbda;
     border-radius: 50px;
     padding: 20px 50px;
     display: inline-block;
@@ -72,7 +72,7 @@ a:hover {
 
 .cta:hover {
     background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5));
-    color: #CE8F8A;
+    color: #ffffff;
 }
 
 .présentation img {
@@ -89,8 +89,8 @@ margin: auto;
     align-items: center;
     margin: auto;
     justify-content: space-between;
-    padding: 200px;
-    gap: 70px;
+    padding: 500px;
+    gap: 150px;
 }
 
 header img {
@@ -99,13 +99,14 @@ header img {
 }
 
 .texte-page {
-    border-bottom: 2px solid #CE8F8A;
-    border-right: 2px solid #CE8F8A;
-    padding: 70px;
+    border-bottom: 2px solid #5d8260;
+    border-right: 2px solid #5d8260;
+    padding: 200px;
     width: 50%;
     margin: auto;
     margin-top: 80px;
     margin-bottom: 100px;
+    gap: 20px;
 }
 
 .formulaire h1 {
@@ -118,11 +119,16 @@ header img {
     align-items: center;
     margin: auto;
     justify-content: space-between;
-    padding: 50px 400px;
-    gap: 70px;
-    border-bottom: 2px solid #CE8F8A;
-    border-right: 2px solid #CE8F8A;
+    padding: 50px 50px;
+    gap: 20px;
 }
+.formulaire img {
+    max-height: 50%;
+    min-height: 30%;
+    max-width: 50%;
+    min-width: 30%;
+    margin: auto;
+    }
 
 /*CSS pour le formulaire de la page contact
 form {
