--- a/style.css
+++ b/style.css
@@ -8,16 +8,24 @@ body {
     color: white;
     font-family: "poppins", sans serif;
     font-style: normal;
-    font-size: 1em;
+    font-size: 1rem;
     font-optical-sizing: auto;
     text-align: justify;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header,
 footer {
     background-color: #f0dbda;
-    padding: 10px 50px 10px 50px;
-    margin: auto;
+}
+
+footer {
+    display: flex;
+    justify-content: ;
 }
 
 nav {
@@ -78,12 +86,9 @@ a:hover {
 
 .présentation {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    margin: auto;
-    justify-content: space-between;
-    padding: 400px 400px;
-    gap: 200px;
+   margin: 30px;
 }
 
 header img {
@@ -94,11 +99,8 @@ header img {
 .texte-page {
     border-bottom: 2px solid #5d8260;
     border-right: 2px solid #5d8260;
-    padding: 200px;
-    width: 50%;
-    margin: auto;
-    margin-top: 80px;
-    margin-bottom: 100px;
+    margin: 10rem;
+    padding: 5rem;
     gap: 20px;
 }
 
@@ -116,10 +118,7 @@ header img {
     gap: 20px;
 }
 .formulaire img {
-    max-height: 70%;
-    min-height: 40%;
-    max-width: 60%;
-    min-width: 40%;
+    max-width: 1000px;
     margin: auto;
     }
 
