--- a/style.css
+++ b/style.css
@@ -79,16 +79,15 @@ a:hover {
 }
 
 .cta:hover {
-    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5));
+    background: linear-gradient (rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5));
     color: #ffffff;
 }
 
 
 .présentation {
+    margin: 30px auto; /* Centrer horizontalement */
+    max-width: 1000px; /* Limiter la largeur maximale */
     display: flex;
-    flex-direction: column;
-    align-items: center;
-   margin: 30px;
 }
 
 header img {
@@ -117,6 +116,7 @@ header img {
     padding: 50px 50px;
     gap: 20px;
 }
+
 .formulaire img {
     max-width: 1000px;
     margin: auto;
