modif couleur//acessibilité

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #96a692;
+    background-color: rgb(55, 78, 50);
     color: white;
     font-family: "poppins", sans serif;
     font-style: normal;
